--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,11 +36,23 @@
 }
 
 /* Login card */
-#loginCard {
-    width: 50%;
-    margin: 0 auto;
+.my-form {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
+.my-form .row {
+    margin-left: 0;
+    margin-right: 0;
+}
 
+.login-form {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 
+.login-form .row {
+    margin-left: 0;
+    margin-right: 0;
+}
 
