--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,37 +1,65 @@
-<br/>
-<br/>
-<br/>
-<div class="container p-1">
-    <% if (errors.length > 0) { %>
-        <% errors.forEach(err => { %>
-            <div class="alert alert-danger"><%= err.text %></div>
-        <% }); %>
-    <% } %>
-    <div class="card" id="loginCard"><!--Container do Card-->
-        <p class="mt-3 text-center mx-3"><!--Pequena Gambiarra para centralizar a logo-->
-            <img src="/img/logo/logo.png" class="img img-fluid" width="200px" height="65px" alt="">
-        </p>
-        <div class="container"><!--Container para reduzir o tamanho interno do conteúdo-->
-            <form class="mx-3" action="/login"><!--Área do formulário de login-->
+<main class="login-form">
+    <div class="cotainer">
+        <% if (errors) { %>
+            <% errors.forEach(err => { %>
+                <div class="alert alert-danger"><%= err.text %></div>
+            <% }); %>
+        <% } %>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">Login</div>
+                    <div class="card-body">
+                        <form action="/login" method="post">
+                            <div class="form-group row">
+                                <label for="email_address" class="col-md-4 col-form-label text-md-right">Email</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="email_address" class="form-control" name="email" required autofocus>
+                                </div>
+                            </div>
 
-                <div class="form-group"><!-- Inputs de login e senha -->
-                    <label for="exampleInputEmail1">Usuário</label>
-                    <input type="text" class="form-control" placeholder="Username" style="border-radius: 15px" name="email" required>
+                            <div class="form-group row">
+                                <label for="password" class="col-md-4 col-form-label text-md-right">Senha</label>
+                                <div class="col-md-6">
+                                    <input type="password" id="password" class="form-control" name="password" required>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-md-6 offset-md-4">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="remember"> Lembrar-me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-md-6 offset-md-4">
+                                    <button type="submit" class="btn btn-primary">
+                                        Entrar
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-md-6 offset-md-4">
+                                    <a href="#" class="btn btn-link">
+                                        Esqueceu sua senha?
+                                    </a>
+                                </div>
+                                <div class="col-md-6 offset-md-4">
+                                    <a href="/register" class="btn btn-link">
+                                        Registre-se
+                                    </a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control" placeholder="Password" style="border-radius: 15px" name="password" required>
-                </div><!-- Fim dos inputs -->
+            </div>
+        </div>
+    </div>
 
-                <p class="text-center mb-0"><!-- Botão para entrar -->
-                    <button type="submit" class="btn btn-outline-dark align-center" style="width: 100%; border-radius: 15px"">Entrar</button>
-                </p>
-                <br/>
-                <!-- Links de páginas externas -->
-                <p class="mt-2 mb-0"><a href="#" style="font-size: 13px">Esqueceu a senha?</a></p>
-                <p><a href="/register" style="font-size: 13px">Criar conta</a></p>
-            </form><!-- Fim Form -->
-        </div><!-- Fim container interno -->
-        <br/>
-    </div><!-- Fim do card -->
-</div><!-- Fim do main container -->
+</main>
