--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,39 +1,51 @@
-<br/>
-<br/>
-<br/>
-<div class="container p-1">
-    <% if (errors.length > 0) { %>
-      <% errors.forEach(err => { %>
-          <div class="alert alert-danger"><%= err.text %></div>
-      <% }); %>
-    <% } %>
-    <div class="card" id="loginCard"><!--Container do Card-->
-        <h3 class="text-center">Account Register</h3>
-        <div class="container">
-            <form class="mx-3" action="/register" method="post">
+<main class="login-form">
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">Registre-se</div>
+                    <div class="card-body">
+                        <form action="/register" method="post">
+                            <div class="form-group row">
+                                <label for="name" class="col-md-4 col-form-label text-md-right">Nome</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="name" class="form-control" name="name" required autofocus>
+                                </div>
+                            </div>
 
-                <div class="form-group"><!-- Inputs de login e senha -->
-                    <label for="name">Nome</label>
-                    <input type="text" class="form-control" placeholder="Name" style="border-radius: 15px" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" placeholder="Email" style="border-radius: 15px" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control" placeholder="Password" style="border-radius: 15px" name="password" required>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Confirmação da senha</label>
-                    <input type="password" class="form-control" placeholder="Confirm Password" style="border-radius: 15px" name="rpassword" required>
-                </div><!-- Fim dos inputs -->
+                            <div class="form-group row">
+                                <label for="email_address" class="col-md-4 col-form-label text-md-right">Email</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="email_address" class="form-control" name="email" required autofocus>
+                                </div>
+                            </div>
 
-                <p class="text-center mb-0"><!-- Botão para entrar -->
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                </p>
-            </form><!-- Fim Form -->
-        </div><!-- Fim do container nterno -->
-        <br/>
-    </div><!-- Fim do card -->
-</div><!-- Fim do main container -->
+                            <div class="form-group row">
+                                <label for="password" class="col-md-4 col-form-label text-md-right">Senha</label>
+                                <div class="col-md-6">
+                                    <input type="password" id="password1" class="form-control" name="password1" required>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="password" class="col-md-4 col-form-label text-md-right">Confime sua senha</label>
+                                <div class="col-md-6">
+                                    <input type="password" id="password2" class="form-control" name="password2" required>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 offset-md-4">
+                                <button type="submit" class="btn btn-primary">
+                                    Registre-se
+                                </button>
+                            </div>
+
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+</main>
