--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,16 +1,15 @@
 <main class="login-form">
     <div class="cotainer">
-        <% if (errors) { %>
-            <% errors.forEach(err => { %>
-                <div class="alert alert-danger"><%= err.text %></div>
-            <% }); %>
-        <% } %>
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header">Login</div>
                     <div class="card-body">
                         <form action="/login" method="post">
+                            <% if(messages.error) {%>
+                                <div class="alert alert-danger"><%= messages.error %></div>
+                            <% } %>
+                            
                             <div class="form-group row">
                                 <label for="email_address" class="col-md-4 col-form-label text-md-right">Email</label>
                                 <div class="col-md-6">
