--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,6 +6,9 @@
                     <div class="card-header">Registre-se</div>
                     <div class="card-body">
                         <form action="/register" method="post">
+                            <% if(messages.error) {%>
+                                <div class="alert alert-danger"><%= messages.error %></div>
+                            <% } %>
                             <div class="form-group row">
                                 <label for="name" class="col-md-4 col-form-label text-md-right">Nome</label>
                                 <div class="col-md-6">
@@ -16,21 +19,21 @@
                             <div class="form-group row">
                                 <label for="email_address" class="col-md-4 col-form-label text-md-right">Email</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="email_address" class="form-control" name="email" required autofocus>
+                                    <input type="text" id="email" class="form-control" name="email" required autofocus>
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="password" class="col-md-4 col-form-label text-md-right">Senha</label>
                                 <div class="col-md-6">
-                                    <input type="password" id="password1" class="form-control" name="password1" required>
+                                    <input type="password" id="password" class="form-control" name="password" required>
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="password" class="col-md-4 col-form-label text-md-right">Confime sua senha</label>
                                 <div class="col-md-6">
-                                    <input type="password" id="password2" class="form-control" name="password2" required>
+                                    <input type="password" id="rpassword" class="form-control" name="rpassword" required>
                                 </div>
                             </div>
 
