--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,13 +9,11 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <!---->
-        <title>Simple Node App</title>
+        <title>Simple Auth App</title>
     </head>
-
 
     <body>
         <%- body %>
-
         <!-- Jquery e bootstrap.js -->
         <script src="/js/jquery-3.4.1.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
