--- a/views/auth/changePassword.ejs
+++ b/views/auth/changePassword.ejs
@@ -3,25 +3,12 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header">Registre-se</div>
+                    <div class="card-header">Alterar senha</div>
                     <div class="card-body">
-                        <form action="/register" method="post">
-                            <% if(messages.error) {%>
+                        <form action="/user/change-password" method="post">
+                            <% if(messages.error) { %>
                                 <div class="alert alert-danger"><%= messages.error %></div>
                             <% } %>
-                            <div class="form-group row">
-                                <label for="name" class="col-md-4 col-form-label text-md-right">Nome</label>
-                                <div class="col-md-6">
-                                    <input type="text" id="name" class="form-control" name="name" required autofocus>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label for="email_address" class="col-md-4 col-form-label text-md-right">Email</label>
-                                <div class="col-md-6">
-                                    <input type="text" id="email" class="form-control" name="email" required autofocus>
-                                </div>
-                            </div>
 
                             <div class="form-group row">
                                 <label for="password" class="col-md-4 col-form-label text-md-right">Senha</label>
@@ -39,7 +26,7 @@
 
                             <div class="col-md-6 offset-md-4">
                                 <button type="submit" class="btn btn-primary">
-                                    Registre-se
+                                    Alterar senha
                                 </button>
                             </div>
 
